--- a/positive-definite-functions.tex
+++ b/positive-definite-functions.tex
@@ -129,7 +129,7 @@ $$
 is $k$-times monotone since $(-1)^h\psi_k^{(h)}=k(k-1)\dots(k-h+1)(1-r)^{k-h}_+\geq0$ for each~$h=0,1,\dots,k$, hence it is positive definite on $\R^d\!\.$ for any dimension~$d$ such that~$\lfloor d/2\rfloor\leq k-2$.
 \postskip
 
-\noindent The truncated power functions are {\em compactly supported}.  This is an advantage, since a compactly supported function can lead to an interpolation system whose matrix is sparse, so a system which is good from the computational point of view.  However, a single function from this family cannot be used for interpolation on~$\R^d\!\.$ for all~$d$.   Indeed, it is known (Wendland \cite[wendland_2004], Chapter~9), that a non-trivial continuous function~$\phi$ which is positive definite on~$\R^d\!\.$ for all~$d$ cannot have zeros, thus we can’t expect to find a compactly supported function~$\phi$ which is positive definite on~$\R^d\!\.$ for all~$d$. 
+\noindent The truncated power functions are {\em compactly supported}.  This is an advantage, since a compactly supported function can lead to an interpolation system whose matrix is sparse, so a system which is good from the computational point of view.  However, a single function from this family cannot be used for interpolation on~$\R^d\!\.$ for all~$d$.   Indeed, it is known (Wendland \cite[wendland_2004], Chapter~9), that a non-trivial continuous function~$\phi$ which is positive definite on~$\smash{\R^d\!\.}$ for all~$d$ cannot have zeros, thus we can’t expect to find a compactly supported function~$\phi$ which is positive definite on~$\smash{\R^d\!\.}$ for all~$d$. 
 
 A truncated power function~$\phi$  leads to a function~$Φ$, defined by~\ref[phi], which is not very regular, as it is no more than continuous.  Since the basis functions will determine the smoothness of the approximant, it is necessary to have also smoother functions with local support. One example of such functions is given by the Wendland’s family of functions.
 
