--- a/the-interpolation-problem.tex
+++ b/the-interpolation-problem.tex
@@ -5,7 +5,7 @@ Let $X = \{\range x_N/\}$ be a finite set of scattered points in some domain~$\O
 \medskip
 
 \frame{\line{\hfil\hsize=.97\hsize\vbox{\kern0.5ex
-\noindent{\bf Problem.} Given a set $X = \{\range x_N/\}$ of $N$ {\em distinct} points in a domain~$\Omega\subseteq \R^d\!\!$,\, a set  $F=\{\range f_N/\}$ of $N$ real numbers, and a class~$\cal S$ of real-valued functions defined on~$\Omega$, find a function~$s\in\cal S$ which interpolates the pair of data~$(X, F)$, i.e., a function~$s$ such that 
+\noindent{\bf Problem.} Given a set $X = \{\range x_N/\}$ of {\em distinct} points in a domain~$\Omega\subseteq \R^d\!\!$,\, a set  $F=\{\range f_N/\}$ of real numbers, and a class~$\cal S$ of real-valued functions defined on~$\Omega$, find a function~$s\in\cal S$ which interpolates the pair of data~$(X, F)$, i.e., a function~$s$ such that 
 $$
 s(x_j) = f_j\mathbox{,\quad for all $j\in\{1,2,\dots, N\}$.}\eqmark[intcond]
 $$
