--- a/thesis.tex
+++ b/thesis.tex
@@ -11,7 +11,7 @@
 \fontfam[EBGaramond]
 \fontfam[TypewriterMT]
 \BaskervilleMT
-\typosize[12.2/14.5]
+\typosize[12.27/14.63]
 \load[patches, garamond-math-fix, micro]
 %\OpTeX
 % We must ensure that . , ; etc are from the same font in text and math mode.
@@ -93,8 +93,8 @@
 \sec Invariance properties
 \input invariance-properties
 
-\sec[numericalsec] Numerical observations
-\input numerical-observations
+\sec[numericalsec] Numerical considerations
+\input numerical-considerations
 
 \chap Discontinuities detection\nl ^^J
       and reconstruction
