--- a/invariance-properties.tex
+++ b/invariance-properties.tex
@@ -109,7 +109,7 @@ $$
 (f_k-s_F^{(k)\!}(x_k))^2 = (E_F)_k = \sum_{j=1}^N f_j\.{C_{k,j}\over C_{k,k}},\qquad
 (g_k-s_G^{(k)\!}(x_k))^2 = (E_G)_k = \sum_{j=1}^N g_j\.{C_{k,j}\over C_{k,k}}.
 $$
-As proved in Theorem~\ref[flatlimit], when $ε→0$ these two quantities converge,
+As proved in Property~\ref[flatlimit], when $ε→0$ these two quantities converge,
 $$
 (f_k-s_F^{(k)\!}(x_k))^2→ \sum_{j=1}^N f_j\.{(\Cal C_{-p})_{k,j}\over (\Cal C_{-p})_{k,k}},\qquad
 (g_k-s_G^{(k)\!}(x_k))^2→ \sum_{j=1}^N g_j\.{(\Cal C_{-p})_{k,j}\over (\Cal C_{-p})_{k,k}},
